// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobTasks /> should render properly with job tasks 1`] = `
.emotion-41 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-40 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-38 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-38 tr {
  background-color: #252525;
}

.emotion-38 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-38 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-38 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-38 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-38 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-38 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-38 td {
  max-width: calc(100vw / 5);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-38 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-38 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(3) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-17 {
  cursor: pointer;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  padding-left: 16px;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15 {
  font-style: italic;
}

<div
  className="emotion-41"
>
  <div
    className="emotion-5"
  >
    <h3
      className="emotion-0"
    >
      Number of 
      Tasks
      : 
      3
    </h3>
    <button
      className="emotion-4"
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-3"
      >
        <svg
          className="emotion-1"
          color="#ffffff"
          data-file-name="refresh.svg"
          width={20}
        />
        <div
          className="emotion-2"
        >
          Refresh 
          Tasks
        </div>
      </div>
    </button>
  </div>
  <div
    className="emotion-40"
  >
    <div
      className="emotion-39"
    >
      <table
        className="emotion-38"
      >
        <thead>
          <tr>
            <th
              className="emotion-6"
            >
              Task State
            </th>
            <th
              className="emotion-6"
            >
              Task ID
            </th>
            <th
              className="emotion-6"
            >
              Description
            </th>
            <th
              className="emotion-6"
            >
              Started
            </th>
            <th
              className="emotion-6"
            >
              Duration
            </th>
            <th
              className="emotion-6"
            >
              Errors
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="emotion-17"
            onClick={[Function]}
          >
            <td
              className="emotion-13"
            >
              <svg
                color="#ffffff"
                data-file-name="clock.svg"
                width={20}
              />
              <span
                className="emotion-12"
              >
                Waiting
              </span>
            </td>
            <td>
              <a
                className="emotion-14"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/c812fa09-5f3a-11ea-bb46-6a6895b1a9f6/script"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="c812fa09-5f3a-11ea-bb46-6a6895b1a9f6"
              >
                c812fa09-5f3a-11ea-bb46-6a6895b1a9f6
              </a>
            </td>
            <td
              title="Expand with 20 assets, 8 processors."
            >
              Expand with 20 assets, 8 processors.
            </td>
            <td>
              <div
                className="emotion-15"
              >
                Waiting...
              </div>
            </td>
            <td>
              <div
                className="emotion-15"
              >
                Waiting...
              </div>
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-17"
            onClick={[Function]}
          >
            <td
              className="emotion-13"
            >
              <svg
                color="#ebb52e"
                data-file-name="generating.svg"
                width={20}
              />
              <span
                className="emotion-12"
              >
                Running
              </span>
            </td>
            <td>
              <a
                className="emotion-14"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f2-44a7-19e1-a67f-1e6fa1f82545/script"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="ea7836f2-44a7-19e1-a67f-1e6fa1f82545"
              >
                ea7836f2-44a7-19e1-a67f-1e6fa1f82545
              </a>
            </td>
            <td
              title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
            >
              Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
            </td>
            <td>
              2020-03-05 23:41:02
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-17"
            onClick={[Function]}
          >
            <td
              className="emotion-13"
            >
              <svg
                color="#4ac565"
                data-file-name="checkmark.svg"
                width={20}
              />
              <span
                className="emotion-12"
              >
                Success
              </span>
            </td>
            <td>
              <a
                className="emotion-14"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f3-44a7-19e1-a67f-1e6fa1f82545/script"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="ea7836f3-44a7-19e1-a67f-1e6fa1f82545"
              >
                ea7836f3-44a7-19e1-a67f-1e6fa1f82545
              </a>
            </td>
            <td
              title="Expand with 15 assets, 8 processors."
            >
              Expand with 15 assets, 8 processors.
            </td>
            <td>
              2020-03-05 23:41:55
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-17"
            onClick={[Function]}
          >
            <td
              className="emotion-13"
            >
              <svg
                color="#c92300"
                data-file-name="crossSmall.svg"
                width={20}
              />
              <span
                className="emotion-12"
              >
                Failure
              </span>
            </td>
            <td>
              <a
                className="emotion-14"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/c812fa09-5f3a-11ea-bb46-6a6895b1a9f9/script"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="c812fa09-5f3a-11ea-bb46-6a6895b1a9f9"
              >
                c812fa09-5f3a-11ea-bb46-6a6895b1a9f9
              </a>
            </td>
            <td
              title="Expand with 20 assets, 8 processors."
            >
              Expand with 20 assets, 8 processors.
            </td>
            <td>
              2020-03-05 23:41:06
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-17"
            onClick={[Function]}
          >
            <td
              className="emotion-13"
            >
              <svg
                color="#808080"
                data-file-name="paused.svg"
                width={20}
              />
              <span
                className="emotion-12"
              >
                Skipped
              </span>
            </td>
            <td>
              <a
                className="emotion-14"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f2-44a7-19e1-a67f-1e6fa1f82549/script"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="ea7836f2-44a7-19e1-a67f-1e6fa1f82549"
              >
                ea7836f2-44a7-19e1-a67f-1e6fa1f82549
              </a>
            </td>
            <td
              title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
            >
              Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
            </td>
            <td>
              2020-03-05 23:41:02
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-17"
            onClick={[Function]}
          >
            <td
              className="emotion-13"
            >
              <svg
                color="#4a90e2"
                data-file-name="squareSquareSquare.svg"
                width={20}
              />
              <span
                className="emotion-12"
              >
                Queued
              </span>
            </td>
            <td>
              <a
                className="emotion-14"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f3-44a7-19e1-a67f-1e6fa1f82549/script"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="ea7836f3-44a7-19e1-a67f-1e6fa1f82549"
              >
                ea7836f3-44a7-19e1-a67f-1e6fa1f82549
              </a>
            </td>
            <td
              title="Expand with 15 assets, 8 processors."
            >
              Expand with 15 assets, 8 processors.
            </td>
            <td>
              2020-03-05 23:41:55
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div>
     
  </div>
  <div>
     
  </div>
</div>
`;

exports[`<JobTasks /> should render properly without job tasks 1`] = `
.emotion-18 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(3) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-15 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-15 tr {
  background-color: #252525;
}

.emotion-15 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-15 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-15 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-15 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-15 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-15 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-15 td {
  max-width: calc(100vw / 5);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-15 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-15 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-14 {
  height: 100%;
  pointer-events: none;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
  className="emotion-18"
>
  <div
    className="emotion-5"
  >
    <h3
      className="emotion-0"
    >
      Number of 
      Tasks
      : 
      0
    </h3>
    <button
      className="emotion-4"
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-3"
      >
        <svg
          className="emotion-1"
          color="#ffffff"
          data-file-name="refresh.svg"
          width={20}
        />
        <div
          className="emotion-2"
        >
          Refresh 
          Tasks
        </div>
      </div>
    </button>
  </div>
  <div
    className="emotion-17"
  >
    <div
      className="emotion-16"
    >
      <table
        className="emotion-15"
      >
        <thead>
          <tr>
            <th
              className="emotion-6"
            >
              Task State
            </th>
            <th
              className="emotion-6"
            >
              Task ID
            </th>
            <th
              className="emotion-6"
            >
              Description
            </th>
            <th
              className="emotion-6"
            >
              Started
            </th>
            <th
              className="emotion-6"
            >
              Duration
            </th>
            <th
              className="emotion-6"
            >
              Errors
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="emotion-14"
          >
            <td
              colSpan={6}
            >
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <svg
                    data-file-name="noJobs.svg"
                    width={200}
                  />
                  <div>
                    This job has no tasks.
                  </div>
                  <div>
                    Any new task will appear here.
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
